--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -45,7 +45,6 @@
 .open-menu,
 .close-menu {
   position: absolute;
-  color: var(--color1);
   cursor: pointer;
   font-size: 2.5rem;
   display: none;
@@ -68,9 +67,9 @@
 
 @media (max-width: 850px) {
   .menu {
-    @include flex(center,center,row);
-    width: 100%;
-    height: 10vh;
+    @include flex(space-evenly,center,column);
+    width: 50%;
+    height: 50vh;
     position: fixed;
     top: 0;
     right: -100%;
