--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,6 @@ a {
 .open-menu,
 .close-menu {
   position: absolute;
-  color: var(--color1);
   cursor: pointer;
   font-size: 2.5rem;
   display: none;
@@ -126,11 +125,11 @@ a {
 @media (max-width: 850px) {
   .menu {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    flex-direction: row;
-    width: 100%;
-    height: 10vh;
+    flex-direction: column;
+    width: 50%;
+    height: 50vh;
     position: fixed;
     top: 0;
     right: -100%;
