--- a/styles/style.css
+++ b/styles/style.css
@@ -289,8 +289,9 @@ a {
   flex-direction: row;
   padding-top: 7rem;
 }
-#portfolio .box-section:hover {
-  color: rgb(228, 215, 215);
+#portfolio .box-section .box:hover {
+  opacity: 0.4;
+  transition: all 0.2s linear;
 }
 #portfolio .box-section .box1 {
   background-size: cover;
