Modefid Navbar position and scroll behavior

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -7,7 +7,7 @@
     background-color: $voilish-color;
     padding: 12px 20px;
     height: 10vh;
-  
+    position: fixed;
   
     .logo{
       padding-left: 2rem;
