--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -7,6 +7,8 @@
 
   html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
+    scroll-padding: 5rem;
   }
   body {
     font-family: Georgia, "Times New Roman", Times, serif;
